# kalah

./: .gitignore  CLOUD_ARCHITECTURE.md  CURRENT_STATUS.md  EXTERNAL_DRIVE_SETUP.md  GAME_STATE_DESIGN.md  MANCALA_SOLVING.md  OPTIMIZATIONS.md  POSTGRESQL_QUICKSTART.md  PROJECT_DESIGN.md  QUICK_START.md  README.md  RESULTS.md  SCHEMA_ANSWERS.md  STORAGE_ABSTRACTION.md  SUMMARY.md  check_progress.sh  cleanup.sh  cleanup_duplicates.py  pyproject.toml  requirements.txt  solve_kalah_6_4.sh
configs/: kalah_2_2.yaml  kalah_4_3.yaml
docs/: ARCHITECTURE_SUMMARY.md  BATCHING_IMPLEMENTATION.md  CRITICAL_BFS_FIXES.md  INTRA_DEPTH_PROGRESS.md  MEMORY_MANAGEMENT.md  PERFORMANCE_TUNING.md  POSTGRESQL_SETUP.md  STORAGE_OPTIMIZATION_ANALYSIS.md  TUI_MEMORY_FEATURES.md
scripts/: benchmark_bfs.sh  monitor.sh  monitor_solve.py  solve_postgres.sh  solve_with_monitor.sh  test_chunked_solve.py  transfer_sqlite_to_postgresql.py  validate_local_solver.py
src/mancala_solver/: __init__.py
src/mancala_solver/cli/: main.py
src/mancala_solver/core/: __init__.py  game_state.py  hash.py  rules.py
src/mancala_solver/solver/: __init__.py  adaptive_parallel_bfs.py  bfs.py  chunked_bfs.py  chunked_minimax.py  minimax.py  original_bfs.py  parallel.py  parallel_bfs.py  parallel_minimax.py  simple_parallel_bfs.py
src/mancala_solver/storage/: __init__.py  base.py  postgresql.py  sqlite.py
src/mancala_solver/utils/: __init__.py  memory.py  resource_monitor.py  rich_display.py
tests/: __init__.py  test_game_state.py  test_rules.py
